--- a/PokerChips/View/Base.lproj/Main.storyboard
+++ b/PokerChips/View/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="7Co-DN-vWq">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="PaD-g6-dOW">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -9,22 +9,6 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Navigation Controller-->
-        <scene sceneID="VRU-il-VgQ">
-            <objects>
-                <navigationController id="7Co-DN-vWq" sceneMemberID="viewController">
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Ypr-oF-tnR">
-                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <connections>
-                        <segue destination="PaD-g6-dOW" kind="relationship" relationship="rootViewController" id="SuZ-Om-n54"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="zED-Eb-3hr" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-1380" y="251"/>
-        </scene>
         <!--View Controller-->
         <scene sceneID="jq0-9n-ag7">
             <objects>
@@ -34,7 +18,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="92n-WM-yi0">
-                                <rect key="frame" x="133" y="350.5" width="109" height="30"/>
+                                <rect key="frame" x="133" y="328.5" width="109" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                 <state key="normal" title="Start new game"/>
                                 <connections>
@@ -42,7 +26,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LHJ-oI-Jc4">
-                                <rect key="frame" x="121" y="399" width="133" height="30"/>
+                                <rect key="frame" x="121" y="377" width="133" height="30"/>
                                 <state key="normal" title="Load existing game"/>
                             </button>
                         </subviews>
@@ -59,12 +43,12 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="sbt-I6-vV0" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-540" y="251"/>
+            <point key="canvasLocation" x="-620" y="118"/>
         </scene>
-        <!--View Controller-->
+        <!--Game View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="PokerChips" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="GameViewController" customModule="PokerChips" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="667" height="375"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -111,28 +95,32 @@
                                 <rect key="frame" x="0.0" y="0.0" width="667" height="44"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <items>
-                                    <navigationItem title="Poker Chips" id="1QA-mC-DOT"/>
+                                    <navigationItem title="Poker Chips" id="1QA-mC-DOT">
+                                        <barButtonItem key="leftBarButtonItem" title="Menu" id="wGJ-wZ-1fe">
+                                            <connections>
+                                                <action selector="menuButtonPressed:" destination="BYZ-38-t0r" id="lCe-XC-JXn"/>
+                                            </connections>
+                                        </barButtonItem>
+                                        <barButtonItem key="rightBarButtonItem" title="Edit" id="naK-NB-MBq"/>
+                                    </navigationItem>
                                 </items>
                             </navigationBar>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JFk-Fl-Jld">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JFk-Fl-Jld">
                                 <rect key="frame" x="156" y="325" width="30" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Fold"/>
                                 <connections>
                                     <action selector="fold:" destination="BYZ-38-t0r" eventType="touchUpInside" id="CBH-ne-wr9"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CCz-aT-YFy">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CCz-aT-YFy">
                                 <rect key="frame" x="21" y="325" width="44" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Check"/>
                                 <connections>
                                     <action selector="check:" destination="BYZ-38-t0r" eventType="touchUpInside" id="CuU-pA-xw6"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3Wp-dD-dJq">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3Wp-dD-dJq">
                                 <rect key="frame" x="92" y="325" width="30" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Bet"/>
                                 <connections>
                                     <action selector="bet:" destination="BYZ-38-t0r" eventType="touchUpInside" id="QKU-6k-FEW"/>
@@ -161,9 +149,15 @@
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Q6j-u4-hly" secondAttribute="bottom" constant="21" id="380-1B-qR4"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="CCz-aT-YFy" secondAttribute="bottom" constant="20" id="9Fn-s4-HfP"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="8oR-FE-uvm" secondAttribute="bottom" constant="25" id="Eiv-4X-LDh"/>
+                            <constraint firstItem="CCz-aT-YFy" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="21" id="R6E-xE-7s8"/>
+                            <constraint firstItem="3Wp-dD-dJq" firstAttribute="leading" secondItem="CCz-aT-YFy" secondAttribute="trailing" constant="27" id="ZG2-Zl-hIq"/>
+                            <constraint firstItem="JFk-Fl-Jld" firstAttribute="leading" secondItem="3Wp-dD-dJq" secondAttribute="trailing" constant="34" id="cGo-La-SL2"/>
+                            <constraint firstItem="JFk-Fl-Jld" firstAttribute="baseline" secondItem="3Wp-dD-dJq" secondAttribute="baseline" id="hDh-Aj-kRJ"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Q6j-u4-hly" secondAttribute="trailing" constant="20" id="hPW-jm-lmO"/>
                             <constraint firstItem="Q6j-u4-hly" firstAttribute="leading" secondItem="8oR-FE-uvm" secondAttribute="trailing" constant="19" id="hXc-Ne-EWI"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="3Wp-dD-dJq" secondAttribute="bottom" constant="20" id="lQe-p8-X8q"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
@@ -182,7 +176,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="413.60000000000002" y="119.1904047976012"/>
+            <point key="canvasLocation" x="362" y="119"/>
         </scene>
     </scenes>
 </document>
